// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`no-version-yes-tabs > gets all urls from docs config 1`] = `
[
  "docs/api/tab-1",
  "docs/api/tab-1/section-1/page-1",
  "docs/api/page-2",
  "docs/api/section-2",
  "docs/api/tab-1/section-2/page-4",
  "docs/api/tab-1/page-5",
  "docs/api/tab-2",
  "docs/api/tab-2/page-7",
  "docs/api/tab-2/page-8",
]
`;

exports[`no-version-yes-tabs > gets navigation root for /docs/api 1`] = `
{
  "redirect": "docs/api/tab-1/section-1/page-1",
  "type": "redirect",
}
`;

exports[`no-version-yes-tabs > gets navigation root for /docs/api/page-2 1`] = `
{
  "authed": undefined,
  "canonicalSlug": undefined,
  "hidden": undefined,
  "icon": undefined,
  "id": "root.uv.tab-1.tab-1.section-1.page-2",
  "noindex": undefined,
  "orphaned": undefined,
  "pageId": "page-2.md",
  "slug": "docs/api/page-2",
  "title": "Page 2",
  "type": "page",
  "viewers": undefined,
}
`;

exports[`no-version-yes-tabs > gets navigation root for /docs/api/page-2 2`] = `undefined`;

exports[`no-version-yes-tabs > gets navigation root for /docs/api/page-2 3`] = `"docs/api/tab-1"`;

exports[`no-version-yes-tabs > gets navigation root for /docs/api/section-1 1`] = `
{
  "authed": undefined,
  "redirect": "docs/api/tab-1/section-1/page-1",
  "type": "notFound",
}
`;

exports[`no-version-yes-tabs > gets navigation root for /docs/api/tab-1 1`] = `
{
  "authed": undefined,
  "canonicalSlug": undefined,
  "hidden": undefined,
  "icon": undefined,
  "id": "root.uv.tab-1.tab-1.section-3.page-6",
  "noindex": undefined,
  "orphaned": undefined,
  "pageId": "page-6.md",
  "slug": "docs/api/tab-1",
  "title": "Page 6",
  "type": "page",
  "viewers": undefined,
}
`;

exports[`no-version-yes-tabs > gets navigation root for /docs/api/tab-1 2`] = `undefined`;

exports[`no-version-yes-tabs > gets navigation root for /docs/api/tab-1 3`] = `"docs/api/tab-1"`;

exports[`no-version-yes-tabs > gets navigation root for /docs/api/tab-2 1`] = `
{
  "authed": undefined,
  "canonicalSlug": undefined,
  "hidden": undefined,
  "icon": undefined,
  "id": "root.uv.tab-2.tab-2.section-5.page-10",
  "noindex": undefined,
  "orphaned": undefined,
  "pageId": "page-10.md",
  "slug": "docs/api/tab-2",
  "title": "Page 10",
  "type": "page",
  "viewers": undefined,
}
`;

exports[`no-version-yes-tabs > gets navigation root for /docs/api/tab-2 2`] = `undefined`;

exports[`no-version-yes-tabs > gets navigation root for /docs/api/tab-2 3`] = `"docs/api/tab-2"`;

exports[`no-version-yes-tabs > gets navigation root for /docs/api/tab-2/section-5 1`] = `
{
  "redirect": "docs/api/tab-1",
  "type": "redirect",
}
`;
